Add local docker support